# CourierBackend-proyectoSistemas

./: .env  .env.example  .gitignore  API_USAGE.md  CAMBIOS_USUARIOS.md  CORS_SETUP.md  Cargo.toml  DASHBOARD.txt  Dockerfile  ENTREGABLES.md  ENTREGABLE_FINAL.md  ENV.md  INDICE.md  INDICE_COMPLETO.md  MANUAL_TECNICO.md  QUICK_START_USUARIOS.md  README.md  README_IMPLEMENTACION.md  README_USUARIOS.md  RESUMEN_FINAL.md  RESUMEN_USUARIOS.md  SUPABASE_POOLER_SETUP.md  compilacion.txt  courier.db  daily-scrum2.md  docker-compose.yml  main.py  pyproject.toml  test1.py  test_connection_scenarios.py  test_env_config.py  test_supabase_connection.py  verify.sh
api/: dependencies.py  utils.py
api/routes/: auth.py  pedidos.py  users.py
application/: __init__.py
docs/: API.md  ARCHITECTURE.md  AUTH.md  CORS.md  DATABASE.md  DEPLOYMENT.md  DIRECCIONES.md  FrontendForBackend.md  IMPLEMENTACIONES_PENDIENTES.md  MVP_REQUERIMIENTOS.md  PEDIDOS.md  PRODUCTOS.md  README.md  USUARIOS.md
migrations/: 001_initial_schema.sql  002_add_user_fields.sql  003_update_users_table.sql
models/: Calificaciones.py  Clientes.py  DetalleRutas.py  Direcciones.py  EstadoEnum.py  EstadoFacturaEnum.py  EstadoPagoEnum.py  EstadoPedidoEnum.py  EstadoRutaEnum.py  EstadoTrackingEnum.py  EstadoTransportistaEnum.py  Facturas.py  MetodoPagoEnum.py  Notificaciones.py  Pagos.py  Pedidos.py  PrioridadEnum.py  RoleEnum.py  Rutas.py  StandartModel.py  TipoClienteEnum.py  TipoDireccionEnum.py  TipoVehiculoEnum.py  Tracking.py  Transportistas.py  Users.py  Zonas.py  __init__.py  base.py
routers/: __init__.py  health.py  pedidos.py
schemas/: __init__.py  pedido.py  user.py
src/: main.rs
(+113 files in other folders)
