[package]
name = "integrador"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "rust_decimal"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
# Swagger UI / OpenAPI
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
# Auth
jsonwebtoken = "9.0"
# Decimal para manejo de precios
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }
